<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fact_number"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_number"
        android:textColorHint="@color/black"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_info"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/vivodinlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>
</LinearLayout>
